--- a/src/components/details/ListingDetailComponent.css
+++ b/src/components/details/ListingDetailComponent.css
@@ -7,3 +7,9 @@ img {
 .header-jumbotron {
     margin-top: 10px;
 }
+
+.logout-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
