--- a/src/components/home/HomeComponent.css
+++ b/src/components/home/HomeComponent.css
@@ -4,10 +4,23 @@
     top:10px;
 }
 
-
 .logo
 {
     margin: auto;
     width: 15%;
     top:10px;
+}
+
+.row {
+    text-align: center;
+}
+
+.logout-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.col-sm-2 {
+    margin-left: 25px;
 }
