--- a/src/components/profile/ProfileComponentStyles.css
+++ b/src/components/profile/ProfileComponentStyles.css
@@ -2,8 +2,33 @@
     margin-top: 50px;
 }
 
+.body {
+    width: 100%;
+    height: 100%;
+}
+
 .profile-picture {
     height: 300px;
     width: 300px;
     border: 1px solid gray;
+}
+
+.profile-background-image {
+    width: 100%;
+    height: 100%;
+    top:0px;
+    left:0px;
+    z-index:-1;
+}
+
+.profile-box {
+    position: absolute;
+}
+
+.profile-center {
+    text-align: center;
+}
+
+.home-button {
+    text-align: left;
 }
