--- a/src/components/search/SearchBarComponentStyle.css
+++ b/src/components/search/SearchBarComponentStyle.css
@@ -24,3 +24,18 @@ h4 {
     top: 10px;
     right: 10px;
 }
+
+.search-container{
+    position: relative;
+}
+
+
+.home-button-link{
+    position: absolute;
+    top: 8px;
+    left: 16px;
+}
+
+.home-button{
+    width: 100px;
+}
